# aituber_test

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.example.json  coverage.xml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  technical_document.md
.cursor/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: development.md
src/: main.py
src/avatar/: avatar_controller.py
src/llm/: local_llm.py
src/stream/: stream_handler.py
src/tts/: local_tts.py
tests/: test_avatar.py  test_integration.py  test_llm.py  test_stream.py  test_tts.py
