[project]
name = "aituber"
version = "0.1.0"
description = "AITuber development environment"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "ollama-python>=0.1.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "bpy>=3.6.0",
    "vrm>=0.0.1",
    "pytchat>=0.0.6",
    "websockets>=11.0.3",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "pydantic>=2.4.0"
]
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"
